bugfixing and using hilbert/dyadic resonance as deliberate spacing